# RustifyMyClaw

./: .gitignore  .rustfmt.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  desired_architecture.md
.claude/: settings.json  statusline.py
.claude/skills/docs-update/: SKILL.md
.claude/skills/stand-up-report/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml
.obsidian/: workspace.json
choco/: rustifymyclaw.nuspec
choco/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
docs/: architecture.md  building-from-source.md  configuration.md
docs/demos/cargo/: README.md  config.yaml
examples/: config.yaml
scripts/: install.ps1  install.sh
src/: cli.rs  config.rs  config_reload.rs  executor.rs  formatter.rs  main.rs  rate_limit.rs  router.rs  security.rs  session.rs  startup.rs  types.rs
src/backend/: claude.rs  codex.rs  gemini.rs  mod.rs
src/channel/: mod.rs  slack.rs  telegram.rs  whatsapp.rs
src/cli/: mod.rs
src/cli/config_cmd/: allow_path.rs  dotted_path.rs  get.rs  init.rs  mod.rs  path.rs  set.rs  show.rs  validate.rs
src/command/: mod.rs
src/tests/: command_test.rs  config_reload_test.rs  config_test.rs  executor_test.rs  formatter_test.rs  rate_limit_test.rs  security_test.rs  session_test.rs
src/tests/backend/: claude_test.rs  codex_test.rs  gemini_test.rs  registry_test.rs
src/tests/channel/: slack_test.rs  telegram_test.rs  whatsapp_test.rs
src/tests/cli/config_cmd/: allow_path_test.rs  dotted_path_test.rs
systemd/: env.example  rustifymyclaw.service
tests/daemon-end-to-end/: test_cleanup.sh  test_instructions.md  test_setup_automation.sh
