[package]
name = "bridgecli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bridgecli"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
teloxide = { version = "0.17", features = ["macros"] }
regex = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
