[package]
name = "rustifymyclaw"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rustifymyclaw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
teloxide = { version = "0.17", features = ["macros"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }
notify = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
