[package]
name = "rustifymyclaw"
version = "0.1.1"
edition = "2021"
description = "Run Coding CLI Agents from Messaging Apps - single Rust binary, no server required."
license = "Apache-2.0"
repository = "https://github.com/Escoto/RustifyMyClaw"
homepage = "https://github.com/Escoto/RustifyMyClaw"
authors = ["Escoto <ra.escoto@gmail.com>"]
keywords = ["cli-agent", "ai-tool", "claw", "claude-code", "codex"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "rustifymyclaw"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
teloxide = { version = "0.17", features = ["macros"] }
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde_json = "1"
tokio-util = { version = "0.7", features = ["rt"] }
notify = "6"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
